--- a/Polish/Polish.fsproj
+++ b/Polish/Polish.fsproj
@@ -1,12 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>Library</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="Expression.fs" />
+    <Compile Include="Evaluate.fs" />
+    <Compile Include="Parse.fs" />
+    <Compile Include="Tokenize.fs" />
   </ItemGroup>
 
 </Project>
